--- a/ExploringCompSci.html
+++ b/ExploringCompSci.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- <link rel="stylesheet" href="Dagler.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <nav class="navbar navbar-default">
@@ -24,7 +24,7 @@
      </div>
      <div class="collapse navbar-collapse" id="myNavbar">
        <ul class="nav navbar-nav">
-         <li><a href="Dagler.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
          <li class="current_nav"><a href="ExploringCompSci.html">Exploring Computer Science</a></li>
          <li><a href="CompSciA.html">AP Computer Science A</a></li>
          <li><a href="CompSciPrin.html">AP Computer Science Principles</a></li>
