--- a/web2.html
+++ b/web2.html
@@ -32,8 +32,8 @@
             <a class="dropdown-item" href="ecs.html">Exploring Computer Science</a>
             <a class="dropdown-item" href="apcs_a.html">AP Computer Science A</a>
             <a class="dropdown-item" href="apcs_p.html">AP Computer Science Principles</a>
-            <a class="dropdown-item active" href="web1.html">Web Design and Development 1</a>
-            <a class="dropdown-item" href="web2.html">Web Design and Development 2</a>
+            <a class="dropdown-item" href="web1.html">Web Design and Development 1</a>
+            <a class="dropdown-item active" href="web2.html">Web Design and Development 2</a>
           </div>
         </li>
         <li class="nav-item">
@@ -44,10 +44,10 @@
   </nav>
 
   <br>
-
+  
   <div class="container">
     <div class="jumbotron">
-      <h2>Web Design and Development 1</h2>
+      <h2>Web Design and Development 2</h2>
       <p>Insert Picture</p>
     </div>
   </div>
@@ -58,10 +58,12 @@
     <div class="row">
       <div class="col-md-8">
         <h4>Course Overview</h4>
-        <p>This course teaches students to develop Web sites using Hypertext Markup Language version 5 (<i>HTML5</i>) and Cascading Style Sheets (<i>CSS</i>).
-        They'll also insert images, create hyperlinks, and add tables, forms, videos and audio to Web pages, as well as using <i>HTML5</i> Application Programming Interfaces (APIs) to extend the functionality of Web pages.
-        Other topics include validating HTML code, recognizing the importance of search engine optimization (SEO), and implementing fundamental design concepts.
-        Additional topics include an intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
+        <p>This course teaches the essentials of <i>HTML5</i>, Cascading Style Sheets (<i>CSS</i>) and JavaScript (<i>JS</i>).
+          Students will create Web pages using the <i>HTML5</i> structure elements, embed video and audio, and develop cross-browser user-input forms.
+          They will use <i>CSS3</i> to position and format content, and to create effects such as transformations, transitions and animation.
+          They will also learn basic JavaScript coding to extend the functionality of Web pages with modern features such as geolocation, drag-and-drop, canvas and offline Web applications.
+          In addition, they will learn techniques for code validation and testing, form creation, inline form field validation, and mobile design for browsers and apps, including Responsive Web Design.
+          Additional topics include <i>FlexBox</i>, <i>CSS</i> grid layout, intro to <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
         </p>
         <br>
         <h4>Class Policies</h4>
@@ -132,12 +134,12 @@
       <div class="col-md-4 ">
         <h4>Text Book:</h4>
         <ul class="list-group">
-            <li class="list-group-item">CIW: Site Development Associate</li>
+            <li class="list-group-item">CIW: Advanced HTML5 and CCS3 Specialist</li>
         </ul>
         <br>
         <h4>Prerequisites:</h4>
         <ul class="list-group">
-          <li class="list-group-item">None</li>
+          <li class="list-group-item">Web Design and Development 1</li>
         </ul>
         <br>
         <h4>Required Class Materials:</h4>
