--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars toggler"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -47,163 +47,103 @@
 
   <div class="container">
      <div class="jumbotron">
-       <h2>Jumbotron</h2>
-       <p>Insert Picture</p>
+       <h2></h2>
+       <br><br><br><br><br>
      </div>
+
+     <p>Welcome to the Computer Science Pathway at Franklin High School.
+        My name is Mr. Dagler, and I am the teacher for this pathway.
+        At this website, you will find a description for all of the classes I teach and how I connect my students to industry partners: <b>guest speakers, field trips, coding camps, and computations</b>.
+     </p>
+
+     <p>There are two options for this pathway: a programming one and a web-development one.
+        The programming pathway requires you to take exploring computer science, <a href="apcs_a.html">AP Computer Science A</a> and <a href="apcs_p.html">AP Computer Science Principles</a> in order.
+        Where, the web-development pathway requres you to take <a href="ecs.html">Exploring Computer Science</a>, <a href="web1.html">Web-Development 1</a> and <a href="web2.html">Web-Development 2</a> in order.
+        You will earn _________ if you take one additional computer science course in either pathway and receive a graduation cord.
+        If you are interested in my classes or have any other questions, please contact me at <a href="mailto:mrdagler@csfhs.net">mrdagler@csfhs.net</a>.
+     </p>
   </div>
 
   <br>
 
   <div class="container">
-    <h2>Classes Offered</h2>
     <br>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
-        <div class="card">
-          <div class="card-header" id="headingECS">
-            <h4>
-              <button class="btn btn-link collapseButton" data-toggle="collapse" data-target="#collapseECS" aria-expanded="true" aria-controls="collapseECS">
-                Exploring Computer Science
-              </button>
-            </h4>
-          </div>
-
-          <div id="collapseECS" class="collapse" aria-labelledby="headingECS">
-            <div class="card-body">
-              <p class="card-text">Shows high school students the vast world of computer science.
-              Topics in this course include: human computer interaction, website design, developing problem solving techniques,
-              different number systems, the command line interface, programming in the C language, and modular robotics.
-              In the course several students will be given the opportunity to compete at a statewide robotics competition.
-              </p>
-              <a href="ecs.html" class="btn btn-purple">Read More</a>
-            </div>
-          </div>
-        </div>
+          <h4>Exploring Computer Science</h4>
+          <p>Discover the vast world of computer science
+             • Learn the command line interface •
+             Develop problem-solving skills and techniques
+             • Program using the C language •
+             Create code for modular robotics
+             • Compete at a statewide programming/robotics competition.
+          </p>
+          <a href="ecs.html" class="btn btn-purple">Read More</a>
+          <a href="https://github.com/class-handouts/ECS/" class="btn btn-purple">ECS Github Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
-        <div class="card">
-          <div class="card-header" id="headingAPCS_A">
-            <h4>
-              <button class="btn btn-link collapseButton" data-toggle="collapse" data-target="#collapseAPCS_A" aria-expanded="true" aria-controls="collapseAPCS_A">
-                AP Computer Science A
-              </button>
-            </h4>
-          </div>
-  
-          <div id="collapseAPCS_A" class="collapse" aria-labelledby="headingAPCS_A">
-            <div class="card-body">
-              <p>Is equivalent to a first-semester, college-level course in computer science.
-              This course emphasizes both object-oriented and imperative problem solving and design using the Java language.
-              Some topics in this course include: design strategies and methodologies, data structures, developing algorithms, and approaches to processing data.
-              This course is on a 5.0 GPA bump and there is an AP test the students can take at the end of the course for possible college credit.
-              </p>
-              <a href="apcs_a.html" class="btn btn-purple">Read More</a>
-            </div>
-          </div>
-        </div>
+            <h4>AP Computer Science A</h4>
+            <p>Learn content equivalent to a first-semester college-level course in CS
+               • Learn object-oriented programming using the Java language •
+               Solve problems by developing algorithms and using data structures
+               • Compete at HP CodeWars •
+               Earn a 5.0 GPA bump and college credit by taking the AP test.
+            </p>
+            <a href="apcs_a.html" class="btn btn-purple">Read More</a>
+            <a href="https://github.com/class-handouts/APCS_A/" class="btn btn-purple">APCSA Github Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
-        <div class="card">
-          <div class="card-header" id="headingAPCS_P">
-            <h4>
-              <button class="btn btn-link collapseButton" data-toggle="collapse" data-target="#collapseAPCS_P" aria-expanded="true" aria-controls="collapseAPCS_P">
-                AP Computer Science Principles
-              </button>
-            </h4>
-          </div>
-
-          <div id="collapseAPCS_P" class="collapse" aria-labelledby="headingAPCS_P">
-            <div class="card-body">
-              <p>Gives students fundamental concepts of computer science and challenges them to explore how computing and technology is impacting us today.
-              Students will use technology to address real-world problems while learning several topics including abstraction, beginning algorithms, large data sets, and cybersecurity concerns.
-              This course is on a 5.0 GPA bump and there is an AP test the students can take at the end of the course for possible college credit.
-              </p>
-              <a href="apcs_p.html" class="btn btn-purple">Read More</a>
-            </div>
-          </div>
-        </div>     
+            <h4>AP Computer Science Principles</h4>
+            <p>Explore how computing and technology is impacting us today through a project-based approach
+               • Address real-world problems involving Big Data and Cybersecurity •
+               Earn a 5.0 GPA bump and college credit by taking the AP test.
+            </p>
+            <a href="apcs_p.html" class="btn btn-purple">Read More</a>
+            <a href="https://github.com/class-handouts/APCS_P/" class="btn btn-purple">APCSP Github Handouts</a>
       </div>
-	  
-      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
-        <div class="card">
-          <div class="card-header" id="headingweb1">
-            <h4>
-              <button class="btn btn-link collapseButton" data-toggle="collapse" data-target="#collapseweb1" aria-expanded="true" aria-controls="collapseweb1">
-                Web Design and Development 1
-              </button>
-            </h4>
-          </div>
 
-          <div id="collapseweb1" class="collapse" aria-labelledby="headingweb1">
-            <div class="card-body">
-              <p>This course teaches students to develop Web sites using Hypertext Markup Language version 5 (<i>HTML5</i>) and Cascading Style Sheets (<i>CSS</i>).
-              They'll also insert images, create hyperlinks, and add tables, forms, videos and audio to Web pages, as well as using <i>HTML5</i> Application Programming Interfaces (APIs) to extend the functionality of Web pages.
-              Other topics include validating HTML code, recognizing the importance of search engine optimization (SEO), and implementing fundamental design concepts.
-              Additional topics include an intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
-              </p>
-              <a href="web1.html" class="btn btn-purple">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
-        <div class="card">
-          <div class="card-header" id="headingweb2">
-            <h4>
-              <button class="btn btn-link collapseButton" data-toggle="collapse" data-target="#collapseweb2" aria-expanded="true" aria-controls="collapseweb2">
-                Web Design and Development 2
-              </button>
-            </h4>
-          </div>
-  
-          <div id="collapseweb2" class="collapse" aria-labelledby="headingweb2">
-            <div class="card-body">
-              <p>This course teaches the essentials of <i>HTML5</i>, Cascading Style Sheets (<i>CSS</i>) and JavaScript (<i>JS</i>).
-              Students will create Web pages using the <i>HTML5</i> structure elements, embed video and audio, and develop cross-browser user-input forms.
-              They will use <i>CSS3</i> to position and format content, and to create effects such as transformations, transitions and animation.
-              They will also learn basic JavaScript coding to extend the functionality of Web pages with modern features such as geolocation, drag-and-drop, canvas and offline Web applications.
-              In addition, they will learn techniques for code validation and testing, form creation, inline form field validation, and mobile design for browsers and apps, including Responsive Web Design.
-              Additional topics include <i>FlexBox</i>, <i>CSS</i> grid layout, intro to <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
-              </p>
-              <a href="web2.html" class="btn btn-purple">Read More</a>
-            </div>
-          </div>
-        </div>
+            <h4>Web Design and Development 1</h4>
+            <p>Develop web sites using Hypertext Markup Language version 5 (<i>HTML5</i>) and Cascading Style Sheets (<i>CSS</i>).
+               • Insert images, create hyperlinks, add tables, forms, videos and audio to Web pages •
+               Use <i>HTML5</i> Application Programming Interfaces (APIs)
+               • Validating HTML code •
+               Recognizing the importance of search engine optimization (SEO)
+               • Implementing fundamental design concepts •
+               Intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
+            </p>
+            <a href="web1.html" class="btn btn-purple">Read More</a>
+            <a href="https://github.com/class-handouts/Web1/" class="btn btn-purple">Web 1 Github Handouts</a>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
+            <h4>Web Design and Development 2</h4>
+            <p> Essentials of <i>HTML5</i>, Cascading Style Sheets (<i>CSS</i>) and JavaScript (<i>JS</i>)
+               • Create Web pages using <i>HTML5</i> structure elements •
+               Embed video and audio
+               • Develop cross-browser user-input forms •
+               Use <i>CSS3</i> to position and format content, and to create effects
+               • Learn basic JavaScript coding to extend the functionality of Web pages with modern features •
+               Learn techniques for code validation and testing, form creation, inline form field validation, and mobile design for browsers and apps
+               • Intro to <i>FlexBox</i>, <i>CSS</i> grid layout, <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
+            </p>
+            <a href="web2.html" class="btn btn-purple">Read More</a>
+            <a href="https://github.com/class-handouts/Web2" class="btn btn-purple">Web 2 Github Handouts</a>
+
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
+            <h4>Industry Connections</h4>
+            <p>This computer science pathway is more than just the classes you take, it also includes activities to connect with the industry.
+            Some of the activities include: guest speakers, field trips, working with local companies on a project, and computions.
+            </p>
+            <a href="indcon.html" class="btn btn-purple">Read More</a>
       </div>
     </div>
   </div>
 
-  <br>
-
-  <div class="container">
-    <h2>Pathways</h2>
-    <br>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
-        <div class="card">
-          <div class="card-header" id="headingindcon">
-            <h4>
-              <button class="btn btn-link collapseButton" data-toggle="collapse" data-target="#collapseindcon" aria-expanded="true" aria-controls="collapseindcon">
-                Industry Connections
-              </button>
-            </h4>
-          </div>
-
-          <div id="collapseindcon" class="collapse" aria-labelledby="headingindcon">
-            <div class="card-body">
-              <p>This computer science pathway is more than just the classes you take, it also includes activities to connect with the industry.
-              Some of the activities include: guest speakers, field trips, working with local companies on a project, and computions.
-              </p>
-              <a href="indcon.html" class="btn btn-purple">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <br>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
