--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              • Compete at a statewide programming/robotics competition.
           </p>
           <a href="ecs.html" class="btn btn-purple">Read More</a>
-          <a href="https://github.com/class-handouts/ECS/" class="btn btn-purple">ECS Github Handouts</a>
+          <a href="https://github.com/class-handouts/ECS/" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -91,7 +91,7 @@
                Earn a 5.0 GPA bump and college credit by taking the AP test.
             </p>
             <a href="apcs_a.html" class="btn btn-purple">Read More</a>
-            <a href="https://github.com/class-handouts/APCS_A/" class="btn btn-purple">APCSA Github Handouts</a>
+            <a href="https://github.com/class-handouts/APCS_A/" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -101,7 +101,7 @@
                Earn a 5.0 GPA bump and college credit by taking the AP test.
             </p>
             <a href="apcs_p.html" class="btn btn-purple">Read More</a>
-            <a href="https://github.com/class-handouts/APCS_P/" class="btn btn-purple">APCSP Github Handouts</a>
+            <a href="https://github.com/class-handouts/APCS_P/" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -115,7 +115,7 @@
                Intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
             </p>
             <a href="web1.html" class="btn btn-purple">Read More</a>
-            <a href="https://github.com/class-handouts/Web1/" class="btn btn-purple">Web 1 Github Handouts</a>
+            <a href="https://github.com/class-handouts/Web1/" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -130,7 +130,7 @@
                • Intro to <i>FlexBox</i>, <i>CSS</i> grid layout, <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
             </p>
             <a href="web2.html" class="btn btn-purple">Read More</a>
-            <a href="https://github.com/class-handouts/Web2" class="btn btn-purple">Web 2 Github Handouts</a>
+            <a href="https://github.com/class-handouts/Web2" class="btn btn-purple">Handouts</a>
 
       </div>
 
