--- a/ecs.html
+++ b/ecs.html
@@ -48,6 +48,18 @@
      </div>
 
      <div class="container">
+       <br>
+       <h4>Exploring Computer Science</h4>
+       <h4>Contact Information</h4>
+       <div class="row">
+         <p class="col-md-4">Teacher: Mr. Dagler</p>
+         <p class="col-md-4">Email: mrdagler@csfhs.net</p>
+         <p class="col-md-4">Voicemail: (916) 714-8150 x 41912</p>
+       </div>
+       <br>
+     </div>
+
+     <div class="container">
        <div class="row">
          <div class="col-md-8">
            <h4>Course Overview:</h4>
@@ -60,62 +72,24 @@
            <p>All school and district rules/policies are expected and enforced.
               The two most importatn rules to me are: you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.</p>
            <br>
-           <h4>Grading Policies: </h4>
-           <p>Grades are based on the percent of total points earned from assignments, activities and projects.
-              Points are cumulative for each term. Here is the grading scale for our class: </p>
-              <table class="table">
-                <thead class="thead-dark">
-                  <tr>
-                    <th scope="col">Letter</th>
-                    <th scope="col">Percent</th>
-                    <th scope="col">Behavior</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">A</th>
-                    <td>90%-100%</td>
-                    <td>A student who is excellent in computer science and an outstanding student.</td>
-                  </tr>
-                </tbody>
-                <tbody>
-                  <tr>
-                    <th scope="row">B</th>
-                    <td>80%-89.9%</td>
-                    <td>A student who is excellent in computer science and an average student, or average in computer science and a great student.</td>
-                  </tr>
-                </tbody>
-                <tbody>
-                  <tr>
-                    <th scope="row">C</th>
-                    <td>70%-79.9%</td>
-                    <td>A student who is average in computer science and an average student, or excellent in computer science and a poor student.</td>
-                  </tr>
-                </tbody>
-                <tbody>
-                  <tr>
-                    <th scope="row">D/F</th>
-                    <td>0%-69.9%</td>
-                    <td>A student who needs to retake the course because of poor study skills and lack of effort.</td>
-                  </tr>
-                </tbody>
-              </table>
+         </div>
+       </div>
 
-            <p>Students are expected to complete and submit their own work.
-              Involvement in any activity for the purpose of copying, cheating or benefiting from work that is not 100% their own will be subject to consequences as outlined in the Academic Code of Conduct. </p>
+           <div class="row">
+             <div class="col-md-5">
+               <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
+             </div>
 
-            <h4>Privilege Passes</h4>
-            <p>Students will be issued 3 privilege passes to be used, with teacher approval, whenever they leave the classroom during class.
-               Unused passes may be redeemed for extra credit at the end of the term.
-               Students should have their passes with them daily. </p>
-
-             <ul class="list-group">
-               <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
-               <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
-               <li class="list-group-item"><b>Integrity -</b> Be honest, sincere, and kind in words and actions.</li>
-               <li class="list-group-item"><b>Determination -</b> Set goals and meet expectations.</li>
-               <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
-             </ul>
+             <div class="col-md-7">
+               <ul class="list-group">
+                 <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
+                 <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
+                 <li class="list-group-item"><b>Integrity -</b> Be honest, sincere, and kind in words and actions.</li>
+                 <li class="list-group-item"><b>Determination -</b> Set goals and meet expectations.</li>
+                 <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
+               </ul>
+             </div>
+          </div>
 
              <br>
 
@@ -125,41 +99,10 @@
                 Each of these courses is a prerequisite of the one before it. </p>
             </div>
 
-            <div class="col-md-4">
-              <h4>Text Book: </h4>
-              <ul class="list-group">
-                <li class="list-group-item">None</li>
-              </ul>
-
-              <h4>Prerequisites: </h4>
-              <ul class="list-group">
-                <li class="list-group-item">None</li>
-              </ul>
-
-              <h4>Required Class Materials: </h4>
-              <ul class="list-group">
-                <li class="list-group-item">Sharpened Pencil</li>
-                <li class="list-group-item">Pen</li>
-              </ul>
-
-            </div>
         </div>
       </div>
   </div>
 
-  <footer class="fixed-footer">
-    <div class="container">
-      <div class="row">
-        <br>
-        <h2>Contact Information</h2>
-        <h4 class="col-md-3">Teacher: Mr. Dagler</h4>
-        <h4 class="col-md-3">Class Handouts: <a href="bit.ly/mrdaglger_web1">bit.ly/mrdagler_web1</a></h4>
-        <h4 class="col-md-3">Email: mrdagler@csfhs.net</h4>
-        <h4 class="col-md-3">Voicemail: (916) 714-8150 x 41912</h4>
-      </div>
-      <br>
-    </div>
-  </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
